--- a/package.json
+++ b/package.json
@@ -1,65 +1,92 @@
 {
-    "name": "gatsby-starter-default",
-    "private": true,
-    "description": "A simple starter to get up and developing quickly with Gatsby",
-    "version": "0.1.0",
-    "author": "Kyle Mathews <mathews.kyle@gmail.com>",
-    "dependencies": {
-        "@contentful/rich-text-react-renderer": "^14.1.2",
-        "@contentful/rich-text-types": "^14.1.2",
-        "@emotion/react": "^11.1.5",
-        "all": "^0.0.0",
-        "babel-plugin-styled-components": "^1.12.0",
-        "bootstrap": "^4.6.0",
-        "dotenv": "^8.2.0",
-        "frontmatter": "^0.0.3",
-        "gatsby": "^3.0.0-next.0",
-        "gatsby-image": "^3.2.0",
-        "gatsby-image-background-slider": "^0.0.4",
-        "gatsby-plugin-gatsby-cloud": "^2.0.0",
-        "gatsby-plugin-google-fonts": "^1.0.1",
-        "gatsby-plugin-image": "^1.0.0",
-        "gatsby-plugin-manifest": "^3.0.0",
-        "gatsby-plugin-offline": "^4.0.0",
-        "gatsby-plugin-react-helmet": "^4.0.0",
-        "gatsby-plugin-sharp": "^3.2.0",
-        "gatsby-plugin-styled-components": "^4.2.0",
-        "gatsby-plugin-typography": "^3.1.0",
-        "gatsby-source-contentful": "^5.1.2",
-        "gatsby-source-filesystem": "^3.2.0",
-        "gatsby-transformer-remark": "^3.1.0",
-        "gatsby-transformer-sharp": "^3.2.0",
-        "prop-types": "^15.7.2",
-        "react": "^17.0.2",
-        "react-bootstrap": "^1.5.2",
-        "react-dom": "^17.0.1",
-        "react-helmet": "^6.1.0",
-        "react-typography": "^0.16.19",
-        "styled-components": "^5.2.3",
-        "typography": "^0.16.19",
-        "typography-theme-fairy-gates": "^0.16.19"
-    },
-    "devDependencies": {
-        "prettier": "2.2.1"
-    },
-    "keywords": [
-        "gatsby"
-    ],
-    "license": "0BSD",
-    "scripts": {
-        "build": "gatsby build",
-        "develop": "gatsby develop",
-        "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
-        "start": "npm run develop",
-        "serve": "gatsby serve",
-        "clean": "gatsby clean",
-        "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
-    },
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/gatsbyjs/gatsby-starter-default"
-    },
-    "bugs": {
-        "url": "https://github.com/gatsbyjs/gatsby/issues"
+  "name": "gatsby-starter-default",
+  "private": true,
+  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "version": "0.1.0",
+  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "dependencies": {
+    "@contentful/rich-text-react-renderer": "^14.1.2",
+    "@contentful/rich-text-types": "^14.1.2",
+    "@emotion/react": "^11.1.5",
+    "all": "^0.0.0",
+    "babel-plugin-styled-components": "^1.12.0",
+    "bootstrap": "^4.6.0",
+    "dotenv": "^8.2.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "frontmatter": "^0.0.3",
+    "gatsby": "^3.2.1",
+    "gatsby-image": "^3.2.0",
+    "gatsby-image-background-slider": "^0.0.4",
+    "gatsby-plugin-gatsby-cloud": "^2.2.0",
+    "gatsby-plugin-google-fonts": "^1.0.1",
+    "gatsby-plugin-image": "^1.2.0",
+    "gatsby-plugin-manifest": "^3.2.0",
+    "gatsby-plugin-offline": "^4.2.0",
+    "gatsby-plugin-prettier-eslint": "^1.0.4",
+    "gatsby-plugin-react-helmet": "^4.2.0",
+    "gatsby-plugin-sharp": "^3.2.0",
+    "gatsby-plugin-styled-components": "^4.2.0",
+    "gatsby-plugin-typography": "^3.2.0",
+    "gatsby-source-contentful": "^5.2.0",
+    "gatsby-source-filesystem": "^3.2.0",
+    "gatsby-transformer-remark": "^3.2.0",
+    "gatsby-transformer-sharp": "^3.2.0",
+    "prettier-eslint": "^12.0.0",
+    "prop-types": "^15.7.2",
+    "react": "^17.0.2",
+    "react-bootstrap": "^1.5.2",
+    "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
+    "react-typography": "^0.16.19",
+    "styled-components": "^5.2.3",
+    "typography": "^0.16.19",
+    "typography-theme-fairy-gates": "^0.16.19"
+  },
+  "devDependencies": {
+    "eslint": "^7.23.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.23.1",
+    "eslint-plugin-standard": "^5.0.0",
+    "husky": "^6.0.0",
+    "lint-staged": "^10.5.4",
+    "prettier": "^2.2.1",
+    "pretty-quick": "^3.1.0"
+  },
+  "lint-staged": {
+    "*.js": "eslint"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged && pretty-quick --staged"
     }
+  },
+  "keywords": [
+    "gatsby"
+  ],
+  "license": "0BSD",
+  "scripts": {
+    "build": "gatsby build",
+    "develop": "gatsby develop",
+    "lint": "eslint ./",
+    "lint-fix": "eslint ./ --fix",
+    "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
+    "start": "npm run develop",
+    "serve": "gatsby serve",
+    "clean": "gatsby clean",
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
+  },
+  "bugs": {
+    "url": "https://github.com/gatsbyjs/gatsby/issues"
+  }
 }
