--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@contentful/rich-text-react-renderer": "^14.1.2",
     "@contentful/rich-text-types": "^14.1.2",
     "@emotion/react": "^11.1.5",
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
     "all": "^0.0.0",
     "babel-plugin-styled-components": "^1.12.0",
     "bootstrap": "^4.6.0",
@@ -38,6 +40,7 @@
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "react-scroll-parallax": "^2.4.0",
     "react-typography": "^0.16.19",
     "styled-components": "^5.2.3",
     "typography": "^0.16.19",
