--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "gatsby-plugin-typography": "^3.2.0",
     "gatsby-source-contentful": "^5.2.0",
     "gatsby-source-filesystem": "^3.2.0",
+    "gatsby-source-instagram-all": "^4.1.0",
     "gatsby-transformer-remark": "^3.2.0",
     "gatsby-transformer-sharp": "^3.2.0",
+    "lodash": "^4.17.21",
     "prettier-eslint": "^12.0.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
