--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "react-multi-carousel": "^2.6.2",
     "react-scroll-parallax": "^2.4.0",
+    "react-truncate-markup": "^5.1.0",
     "react-typography": "^0.16.19",
     "styled-components": "^5.2.3",
     "typography": "^0.16.19",
