--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@material-ui/icons": "^4.11.2",
     "all": "^0.0.0",
     "babel-plugin-styled-components": "^1.12.0",
+    "babel-preset-gatsby": "^1.4.0",
     "bootstrap": "^4.6.0",
     "dotenv": "^8.2.0",
     "eslint-config-prettier": "^8.1.0",
@@ -31,6 +32,8 @@
     "gatsby-plugin-sharp": "^3.2.0",
     "gatsby-plugin-styled-components": "^4.2.0",
     "gatsby-plugin-typography": "^3.2.0",
+    "gatsby-remark-images": "^5.1.0",
+    "gatsby-remark-relative-images-v2": "^0.1.5",
     "gatsby-source-contentful": "^5.2.0",
     "gatsby-source-filesystem": "^3.2.0",
     "gatsby-source-instagram-all": "^4.1.0",
