--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
+    "react-google-recaptcha": "^2.1.0",
     "react-helmet": "^6.1.0",
     "react-multi-carousel": "^2.6.2",
     "react-scroll-parallax": "^2.4.0",
