--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "@contentful/rich-text-react-renderer": "^14.1.2",
     "@contentful/rich-text-types": "^14.1.2",
     "@emotion/react": "^11.1.5",
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "all": "^0.0.0",
@@ -21,7 +24,8 @@
     "gatsby": "^3.2.1",
     "gatsby-cli": "^3.5.0",
     "gatsby-image": "^3.2.0",
-    "gatsby-image-background-slider": "^0.0.4",
+    "gatsby-image-background-slider": "0.0.4",
+    "gatsby-plugin-fontawesome-css": "^1.1.0",
     "gatsby-plugin-gatsby-cloud": "^2.2.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-image": "^1.2.0",
@@ -40,6 +44,7 @@
     "gatsby-source-instagram-all": "^4.1.0",
     "gatsby-transformer-remark": "^3.2.0",
     "gatsby-transformer-sharp": "^3.2.0",
+    "google-maps-react": "^2.0.6",
     "lodash": "^4.17.21",
     "prettier-eslint": "^12.0.0",
     "prop-types": "^15.7.2",
@@ -49,7 +54,9 @@
     "react-google-recaptcha-v3": "^1.9.4",
     "react-helmet": "^6.1.0",
     "react-multi-carousel": "^2.6.2",
+    "react-places-autocomplete": "^7.3.0",
     "react-scroll-parallax": "^2.4.0",
+    "react-social-icons": "^5.3.0",
     "react-truncate-markup": "^5.1.0",
     "react-typography": "^0.16.19",
     "styled-components": "^5.2.3",
