--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "gatsby-transformer-sharp": "^3.2.0",
     "google-maps-react": "^2.0.6",
     "lodash": "^4.17.21",
+    "mapbox-gl": "^2.2.0",
     "prettier-eslint": "^12.0.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
