--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-dom": "^17.0.1",
     "react-google-recaptcha-v3": "^1.9.4",
     "react-helmet": "^6.1.0",
+    "react-map-gl": "^6.1.15",
     "react-multi-carousel": "^2.6.2",
     "react-places-autocomplete": "^7.3.0",
     "react-scroll-parallax": "^2.4.0",
