--- a/package.json
+++ b/package.json
@@ -52,10 +52,12 @@
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
+    "react-google-recaptcha": "^2.1.0",
     "react-google-recaptcha-v3": "^1.9.4",
     "react-helmet": "^6.1.0",
     "react-map-gl": "^6.1.15",
     "react-multi-carousel": "^2.6.2",
+    "react-netlify-forms": "^1.3.1",
     "react-places-autocomplete": "^7.3.0",
     "react-scroll-parallax": "^2.4.0",
     "react-social-icons": "^5.3.0",
