--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "gatsby-transformer-remark": "^3.2.0",
     "gatsby-transformer-sharp": "^3.2.0",
     "lodash": "^4.17.21",
-    "mapbox-gl": "^2.2.0",
+    "mapbox-gl": "^1.13.1",
     "prettier-eslint": "^12.0.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
@@ -64,7 +64,8 @@
     "react-typography": "^0.16.19",
     "styled-components": "^5.2.3",
     "typography": "^0.16.19",
-    "typography-theme-fairy-gates": "^0.16.19"
+    "typography-theme-fairy-gates": "^0.16.19",
+    "worker-loader": "^3.0.8"
   },
   "devDependencies": {
     "eslint": "^7.23.0",
