--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "gatsby-transformer-sharp": "^3.5.0",
     "lodash": "^4.17.21",
     "mapbox-gl": "^1.13.1",
+    "postcss-svgo": "^5.0.1",
     "prettier-eslint": "^12.0.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
