--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-social-icons": "^5.3.0",
     "react-truncate-markup": "^5.1.0",
     "react-typography": "^0.16.20",
+    "sharp": "^0.29.3",
     "styled-components": "^5.3.0",
     "typography": "^0.16.21",
     "typography-theme-fairy-gates": "^0.16.19",
