--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-plugin-styled-components": "^1.12.0",
     "babel-preset-gatsby": "^1.5.0",
     "bootstrap": "^4.6.0",
+    "caniuse-lite": "^1.0.30001296",
     "dotenv": "^10.0.0",
     "frontmatter": "^0.0.3",
     "gatsby": "^3.5.1",
@@ -47,6 +48,7 @@
     "gatsby-transformer-sharp": "^3.5.0",
     "lodash": "^4.17.21",
     "mapbox-gl": "^1.13.1",
+    "node": "12.19.0",
     "postcss-svgo": "^5.0.3",
     "prettier-eslint": "^12.0.0",
     "prop-types": "^15.7.2",
