--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "gatsby-transformer-sharp": "^3.5.0",
     "lodash": "^4.17.21",
     "mapbox-gl": "^1.13.1",
-    "node": "12.19.0",
+    "node": "^17.3.0",
     "postcss-svgo": "^5.0.3",
     "prettier-eslint": "^12.0.0",
     "prop-types": "^15.7.2",
