--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "caniuse-lite": "^1.0.30001296",
     "dotenv": "^10.0.0",
     "frontmatter": "^0.0.3",
-    "gatsby": "^3.5.1",
+    "gatsby": "^3.0.0-next.0",
     "gatsby-cli": "^3.5.0",
     "gatsby-image": "^3.5.0",
     "gatsby-image-background-slider": "0.0.4",
@@ -30,7 +30,7 @@
     "gatsby-plugin-gatsby-cloud": "^2.5.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-google-gtag": "^3.5.0",
-    "gatsby-plugin-image": "^1.5.0",
+    "gatsby-plugin-image": "^1.14.2",
     "gatsby-plugin-manifest": "^3.5.0",
     "gatsby-plugin-offline": "^4.6.0",
     "gatsby-plugin-prettier-eslint": "^1.0.6",
