--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "gatsby-image": "^3.5.0",
     "gatsby-image-background-slider": "0.0.4",
     "gatsby-plugin-advanced-sitemap": "^2.0.0",
-    "gatsby-plugin-fontawesome-css": "^1.1.0",
+    "gatsby-plugin-fontawesome-css": "^1.0.0",
     "gatsby-plugin-gatsby-cloud": "^2.5.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-google-gtag": "^3.5.0",
@@ -66,6 +66,7 @@
     "react-typography": "^0.16.20",
     "sharp": "^0.29.3",
     "styled-components": "^5.3.0",
+    "type-fest": "^2.8.0",
     "typography": "^0.16.21",
     "typography-theme-fairy-gates": "^0.16.19",
     "worker-loader": "^3.0.8"
