--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
     "gatsby-cli": "^3.5.0",
     "gatsby-image": "^3.5.0",
     "gatsby-image-background-slider": "0.0.4",
+    "gatsby-plugin-advanced-sitemap": "^2.0.0",
     "gatsby-plugin-fontawesome-css": "^1.2.0",
-    "gatsby-plugin-gatsby-cloud": "^4.5.0-next.3",
+    "gatsby-plugin-gatsby-cloud": "^4.4.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-google-gtag": "^4.4.0",
     "gatsby-plugin-image": "^2.4.0",
@@ -45,6 +46,7 @@
     "gatsby-source-instagram-all": "^5.2.1",
     "gatsby-transformer-remark": "^5.4.0",
     "gatsby-transformer-sharp": "^4.4.0",
+    "joi": "^17.5.0",
     "lodash": "^4.17.21",
     "mapbox-gl": "^1.13.1",
     "postcss-svgo": "^5.0.3",
