--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "3.0.0": "^3.0.0",
     "@babel/helper-environment-visitor": "^7.16.7",
     "@contentful/rich-text-react-renderer": "^14.1.3",
     "@contentful/rich-text-types": "^14.1.2",
@@ -70,7 +71,9 @@
     "type-fest": "^2.7.0",
     "typography": "^0.16.21",
     "typography-theme-fairy-gates": "^0.16.19",
-    "worker-loader": "^3.0.8"
+    "webpack": "5.0.0",
+    "worker-loader": "^3.0.8",
+    "yarn": "^1.22.17"
   },
   "devDependencies": {
     "eslint": "^7.26.0",
