--- a/package.json
+++ b/package.json
@@ -5,8 +5,6 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-    "3.0.0": "^3.0.0",
-    "@babel/helper-environment-visitor": "^7.16.7",
     "@contentful/rich-text-react-renderer": "^14.1.3",
     "@contentful/rich-text-types": "^14.1.2",
     "@emotion/react": "^11.4.0",
@@ -19,35 +17,32 @@
     "babel-plugin-styled-components": "^1.12.0",
     "babel-preset-gatsby": "^1.5.0",
     "bootstrap": "^4.6.0",
-    "caniuse-lite": "^1.0.30001296",
     "dotenv": "^10.0.0",
     "frontmatter": "^0.0.3",
-    "gatsby": "^4.4.0",
+    "gatsby": "^3.5.1",
     "gatsby-cli": "^3.5.0",
     "gatsby-image": "^3.5.0",
     "gatsby-image-background-slider": "0.0.4",
-    "gatsby-plugin-advanced-sitemap": "^2.0.0",
-    "gatsby-plugin-fontawesome-css": "^1.2.0",
-    "gatsby-plugin-gatsby-cloud": "^4.4.0",
+    "gatsby-plugin-fontawesome-css": "^1.1.0",
+    "gatsby-plugin-gatsby-cloud": "^2.5.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
-    "gatsby-plugin-google-gtag": "^4.4.0",
-    "gatsby-plugin-image": "^2.4.0",
-    "gatsby-plugin-manifest": "^4.4.0",
-    "gatsby-plugin-offline": "^5.4.0",
+    "gatsby-plugin-google-gtag": "^3.5.0",
+    "gatsby-plugin-image": "^1.5.0",
+    "gatsby-plugin-manifest": "^3.5.0",
+    "gatsby-plugin-offline": "^4.6.0",
     "gatsby-plugin-prettier-eslint": "^1.0.6",
-    "gatsby-plugin-react-helmet": "^5.4.0",
+    "gatsby-plugin-react-helmet": "^4.5.0",
     "gatsby-plugin-react-svg": "^3.0.1",
-    "gatsby-plugin-sharp": "^4.4.0",
-    "gatsby-plugin-styled-components": "^5.4.0",
-    "gatsby-plugin-typography": "^4.4.0",
-    "gatsby-remark-images": "^6.4.0",
+    "gatsby-plugin-sharp": "^3.5.0",
+    "gatsby-plugin-styled-components": "^4.5.0",
+    "gatsby-plugin-typography": "^3.5.0",
+    "gatsby-remark-images": "^5.2.1",
     "gatsby-remark-relative-images-v2": "^0.1.5",
-    "gatsby-source-contentful": "^7.2.0",
-    "gatsby-source-filesystem": "^4.4.0",
-    "gatsby-source-instagram-all": "^5.2.1",
-    "gatsby-transformer-remark": "^5.4.0",
-    "gatsby-transformer-sharp": "^4.4.0",
-    "joi": "^17.5.0",
+    "gatsby-source-contentful": "^5.6.0",
+    "gatsby-source-filesystem": "^3.5.0",
+    "gatsby-source-instagram-all": "^4.2.0",
+    "gatsby-transformer-remark": "^3.2.0",
+    "gatsby-transformer-sharp": "^3.5.0",
     "lodash": "^4.17.21",
     "mapbox-gl": "^1.13.1",
     "postcss-svgo": "^5.0.3",
@@ -68,12 +63,9 @@
     "react-typography": "^0.16.20",
     "sharp": "^0.29.3",
     "styled-components": "^5.3.0",
-    "type-fest": "^2.7.0",
     "typography": "^0.16.21",
     "typography-theme-fairy-gates": "^0.16.19",
-    "webpack": "5.0.0",
-    "worker-loader": "^3.0.8",
-    "yarn": "^1.22.17"
+    "worker-loader": "^3.0.8"
   },
   "devDependencies": {
     "eslint": "^7.26.0",
