--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-typography": "^0.16.20",
     "sharp": "^0.29.3",
     "styled-components": "^5.3.0",
+    "type-fest": "2.7.0",
     "typography": "^0.16.21",
     "typography-theme-fairy-gates": "^0.16.19",
     "worker-loader": "^3.0.8"
