--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gatsby-cli": "^3.5.0",
     "gatsby-image": "^3.5.0",
     "gatsby-image-background-slider": "0.0.4",
+    "gatsby-plugin-advanced-sitemap": "^2.0.0",
     "gatsby-plugin-fontawesome-css": "^1.2.0",
     "gatsby-plugin-gatsby-cloud": "^2.5.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
