--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "gatsby-cli": "^3.5.0",
     "gatsby-image": "^3.5.0",
     "gatsby-image-background-slider": "0.0.4",
-    "gatsby-plugin-advanced-sitemap": "^2.0.0",
     "gatsby-plugin-fontawesome-css": "^1.2.0",
     "gatsby-plugin-gatsby-cloud": "^2.5.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
@@ -35,6 +34,7 @@
     "gatsby-plugin-react-helmet": "^4.5.0",
     "gatsby-plugin-react-svg": "^3.0.1",
     "gatsby-plugin-sharp": "^3.5.0",
+    "gatsby-plugin-sitemap": "^5.4.0",
     "gatsby-plugin-styled-components": "^4.5.0",
     "gatsby-plugin-typography": "^3.5.0",
     "gatsby-remark-images": "^5.2.1",
