--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "gatsby-plugin-react-helmet": "^4.5.0",
     "gatsby-plugin-react-svg": "^3.0.1",
     "gatsby-plugin-sharp": "^3.5.0",
-    "gatsby-plugin-sitemap": "^5.4.0",
+    "gatsby-plugin-sitemap": "4.0.0",
     "gatsby-plugin-styled-components": "^4.5.0",
     "gatsby-plugin-typography": "^3.5.0",
     "gatsby-remark-images": "^5.2.1",
