--- a/netlify.toml
+++ b/netlify.toml
@@ -2,12 +2,8 @@
 package = "@netlify/plugin-sitemap"
 
 [plugins.inputs]
-buildDir = "public"
+buildDir = "."
 filePath = "/sitemap.xml"
-exclude = [
-  # By file Path
-  #'./build-dir/path-to/file.html',
-]
 changeFreq = "daily"
 priority = 0.5
 baseUrl = "https://vivaznewhaven.com"
