--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "gatsby-source-instagram-all": "^4.2.0",
     "gatsby-transformer-remark": "^3.2.0",
     "gatsby-transformer-sharp": "^3.5.0",
+    "immer": "^9.0.6",
     "lodash": "^4.17.21",
     "mapbox-gl": "^1.13.1",
     "postcss-svgo": "^5.0.3",
