--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "immer": "^9.0.6",
     "lodash": "^4.17.21",
     "mapbox-gl": "^1.13.1",
+    "netlify-plugin-submit-sitemap": "^0.2.3",
     "postcss-svgo": "^5.0.3",
     "prettier-eslint": "^12.0.0",
     "prop-types": "^15.7.2",
