--- a/netlify.toml
+++ b/netlify.toml
@@ -1,13 +1,14 @@
-[[plugins]]
-  package = "@netlify/plugin-sitemap"
+#[[plugins]]
+#  package = "@netlify/plugin-sitemap"
 
-  [plugins.inputs]
-  prettyURLs = true
-  trailingSlash = true
-  buildDir = "./"
-  changeFreq = "daily"
-  priority = 0.5
-  baseUrl = "https://vivaznewhaven.com"
+#  [plugins.inputs]
+#  prettyURLs = true
+#  trailingSlash = true
+#  buildDir = "./"
+#  filePath = "/sitemap.xml"
+#  changeFreq = "daily"
+#  priority = 0.5
+#  baseUrl = "https://vivaznewhaven.com"
 
 [build]
   publish = "public"
