--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
-    "@netlify/plugin-sitemap": "^0.8.1",
     "all": "^0.0.0",
+    "ansi-regex": "^5.0.1",
     "babel-plugin-styled-components": "^1.12.0",
     "babel-preset-gatsby": "^1.5.0",
     "bootstrap": "^4.6.0",
+    "browserslist": "^4.16.5",
     "dotenv": "^10.0.0",
     "frontmatter": "^0.0.3",
     "gatsby": "^3.5.1",
@@ -35,6 +36,7 @@
     "gatsby-plugin-react-helmet": "^4.5.0",
     "gatsby-plugin-react-svg": "^3.0.1",
     "gatsby-plugin-sharp": "^3.5.0",
+    "gatsby-plugin-sitemap": "^5.4.0",
     "gatsby-plugin-styled-components": "^4.5.0",
     "gatsby-plugin-typography": "^3.5.0",
     "gatsby-remark-images": "^5.2.1",
@@ -64,8 +66,10 @@
     "react-social-icons": "^5.3.0",
     "react-truncate-markup": "^5.1.0",
     "react-typography": "^0.16.20",
+    "sanitize-html": "^2.3.2",
     "sharp": "^0.29.3",
     "styled-components": "^5.3.0",
+    "trim": "^0.0.3",
     "typography": "^0.16.21",
     "typography-theme-fairy-gates": "^0.16.19",
     "worker-loader": "^3.0.8"
