--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "gatsby-plugin-react-helmet": "^4.5.0",
     "gatsby-plugin-react-svg": "^3.0.1",
     "gatsby-plugin-sharp": "^3.5.0",
-    "gatsby-plugin-sitemap": "^5.4.0",
+    "gatsby-plugin-sitemap": "3.3.0",
     "gatsby-plugin-styled-components": "^4.5.0",
     "gatsby-plugin-typography": "^3.5.0",
     "gatsby-remark-images": "^5.2.1",
@@ -68,6 +68,7 @@
     "react-typography": "^0.16.20",
     "sanitize-html": "^2.3.2",
     "sharp": "^0.29.3",
+    "sitemap": "6.0",
     "styled-components": "^5.3.0",
     "trim": "^0.0.3",
     "typography": "^0.16.21",
