--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "gatsby-plugin-typography": "^3.5.0",
     "gatsby-remark-images": "^5.2.1",
     "gatsby-remark-relative-images-v2": "^0.1.5",
+    "gatsby-remark-responsive-iframe": "^5.5.0",
     "gatsby-source-contentful": "^5.6.0",
     "gatsby-source-filesystem": "^3.5.0",
     "gatsby-source-instagram-all": "^4.2.0",
